--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "@vercel/ncc": "^0.31.1",
     "eslint": "^7.32.0",
     "eslint-plugin-github": "^4.3.2",
+    "eslint-plugin-prettier": "^4.2.1",
     "js-yaml": "^4.1.0",
     "prettier": "2.5.1",
     "typescript": "^4.4.4"
