--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
+    "@types/mustache": "^4.2.2",
+    "mustache": "^4.2.0",
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
